--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ serenity = "0.12"
 env_logger = "0.11.6"
 log = "0.4.24"
 sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"]}
+uuid = "1.16.0"
+reqwest = { version =  "0.12.15", features = ["json"] }
+rand = "0.9.0"
