--- a/config.json
+++ b/config.json
@@ -4,5 +4,9 @@
     "guilds": [
       "1126278315364339712"
     ]
-  }
+  },
+  "database_path": "./ultor.db",
+  "discord_auth_uri": "http://localhost:2424",
+  "discord_auth_token": "key",
+  "ss14_auth_uri": "https://auth.spacestation14.com"
 }
