--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "postgres", "
 uuid = "1.16.0"
 reqwest = { version =  "0.12.15", features = ["json"] }
 rand = "0.9.0"
+once_cell = "1.18"
